# capstone

./: .gitignore  BUILDING  CMakeLists.txt  configure  makefile  net.c  net.h  plan.sh  project-commands.sh  proposal.docx  proposal.odt  proposal.txt
doc/: attendant_creation_tutorial.txt  proposal.odt  proposal.txt
source/: butler.guile  driver.scm  entrance-protocol.h  networking.c  networking.h
source/attendant/: attendant.h
source/butler/: CMakeLists.txt  butler.guile  entrance-protocol.c  entrance-protocol.cpp  entrance-protocol.h  entrance-request.h  entrance-response.h  glue.guile  networking.c  networking.h  utils.c
source/butler/test/: CMakeLists.txt  c-linkage.c  c-linkage.gtest  entrance-protocol.gtest  log.cpp  log.h  main.cpp  networking-pthread.h  networking.gtest
source/saffronsnail/: attendant.scm  butler.scm  driver.scm  log.scm
source/saffronsnail/attendant/: CMakeLists.txt  attendant.h  attendant.hpp  dummy.cpp  echo.cpp
source/saffronsnail/butler/: driver.scm  entrance-protocol.cpp  entrance-protocol.h  entrance-request.h  entrance-response.h  glue.scm  test.scm  utils.h
source/saffronsnail/butler/test/: CMakeLists.txt  entrance-protocol.gtest  utils.gtest
test/butler/: log.cpp  log.h  main.cpp  makefile
